output/development/mystack/mystack-dev/deployment-myapp.yaml
---
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - image: myrepo/myapp-image:1.2.xyz
          name: myapp
          volumeMounts:
            - mountPath: /myAppp/config
              name: myappconfig
      volumes:
        - name: myapp-10fc60ef
          configMap:
            name: myappConfig
metadata:
  name: myapp
  namespace: mystack-dev
kind: Deployment
apiVersion: apps/v1
